<resources>
    <string name="app_name">SpentTravel</string>
    <string name="distance">Distance</string>
    <string name="total_kilometers">Total kilometers</string>
    <string name="price">Price</string>
    <string name="price_per_liter">Price per liter</string>
    <string name="km_per_liter">Kms per liter</string>
    <string name="autonomy">Autonomy</string>
    <string name="total_expense_of">Total expense of</string>
    <string name="amount">R$ 0</string>
    <string name="calculate">Calculate</string>
    <string name="fill_all_field">Fill in all fields</string>
</resources>